--- a/.github/workflows/job_test_debug.yml
+++ b/.github/workflows/job_test_debug.yml
@@ -10,9 +10,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - uses: actions/setup-java@v3
+      - name: Setup Java 17
+        uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
@@ -24,7 +26,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Compile with Full Logs
-        run: ./gradlew :core:network:compileDebugUnitTestKotlin --debug --stacktrace
+        run: ./gradlew :core:network:compileDebugUnitTestKotlin --info --stacktrace
 
       - name: Run Tests
         run: ./gradlew testDebugUnitTest --continue
@@ -36,8 +38,20 @@ jobs:
           path: |
             app/build/reports/tests/
             core/network/build/reports/tests/
+        continue-on-error: true
 
-      - name: Upload Kotlin Compilation Reports
+      - name: Check and Upload Kotlin Compilation Reports
+        if: failure()
+        run: |
+          if [ -d "core/network/build/tmp/kotlin-compile" ]; then
+            echo "Uploading Kotlin compilation reports..."
+            tar -czf compilation-reports.tar.gz core/network/build/tmp/kotlin-compile
+            upload-artifact -f compilation-reports.tar.gz
+          else
+            echo "No Kotlin compilation reports found."
+          fi
+
+      - name: Upload Kotlin Compilation Reports if Available
         if: failure()
         uses: actions/upload-artifact@v4
         with:
@@ -45,3 +59,4 @@ jobs:
           path: |
             **/build/tmp/kotlin-compile/
             **/build/reports/compilation/
+        continue-on-error: true
