ci: Run all unit tests in the compile step
Updated the `job_test_debug.yml` workflow to execute all debug unit tests during the "Compile with Full Logs" step, instead of only compiling the `:core:network` module.

This change ensures that all tests are compiled and run together, providing a more comprehensive check earlier in the CI process. The subsequent "Run Tests" step remains, providing redundancy.

--- a/.github/workflows/job_test_debug.yml
+++ b/.github/workflows/job_test_debug.yml
@@ -26,7 +26,7 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Compile with Full Logs
-        run: ./gradlew :core:network:compileDebugUnitTestKotlin --info --stacktrace
+        run: ./gradlew testDebugUnitTest --info --stacktrace
 
       - name: Run Tests
         run: ./gradlew testDebugUnitTest --continue
