--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -32,6 +32,9 @@ retrofit2KotlinCoroutinesAdapter = "0.9.2"
 
 turbine = "1.2.1"
 mockk = "1.14.5"
+uiTestJunit4 = "1.9.5"
+uiTestManifest = "1.9.5"
+uiTooling = "1.9.5"
 
 [libraries]
 androidx-room-testing-android = { group = "androidx.room", name = "room-testing-android", version.ref = "roomTestingAndroid" }
@@ -75,6 +78,9 @@ converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", ve
 
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
+ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "uiTestJunit4" }
+ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "uiTestManifest" }
+ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "uiTooling" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
