--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -15,6 +15,7 @@ composeBom = "2025.11.00"
 composeIcons = "1.7.8"
 
 appcompat = "1.7.1"
+lifecycleRuntimeTesting = "2.10.0"
 material = "1.13.0"
 
 
@@ -37,6 +38,7 @@ uiTestManifest = "1.9.5"
 uiTooling = "1.9.5"
 
 [libraries]
+androidx-lifecycle-runtime-testing = { module = "androidx.lifecycle:lifecycle-runtime-testing", version.ref = "lifecycleRuntimeTesting" }
 androidx-room-testing-android = { group = "androidx.room", name = "room-testing-android", version.ref = "roomTestingAndroid" }
 androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
