--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ kspVersion = "2.0.21-1.0.27"
 hiltAndroid = "2.57.2"
 hiltNavigationCompose = "1.2.0"
 
+mockkAndroid = "1.14.6"
 roomRuntime = "2.8.3"
 roomTestingAndroid = "2.8.3"
 
@@ -32,7 +33,7 @@ coilVersion = "2.7.0"
 retrofit2KotlinCoroutinesAdapter = "0.9.2"
 
 turbine = "1.2.1"
-mockk = "1.14.5"
+mockk = "1.14.6"
 uiTestJunit4 = "1.9.5"
 uiTestManifest = "1.9.5"
 uiTooling = "1.9.5"
@@ -78,6 +79,7 @@ retrofit2-kotlin-coroutines-adapter = { module = "com.jakewharton.retrofit:retro
 coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilVersion" }
 converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 
+mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockkAndroid" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "uiTestJunit4" }
